fix wrapping of count up numbers

--- a/assets/scss/components/_counter-up.scss
+++ b/assets/scss/components/_counter-up.scss
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: space-between;
     text-align: center;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     grid-template-rows: repeat(1, 1fr);
     @include media-breakpoint-down-xxl {
       grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
